--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "dependencies": {
         "stylelint": "^13.8.0",
-        "stylelint-less": "1.0.1"
+        "stylelint-less": "^1.0.2"
     },
 
     "author": {
