--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "dependencies": {
         "stylelint": "^13.8.0",
-        "stylelint-less": "^1.0.2"
+        "stylelint-less": "^1.0.2",
+        "stylelint-config-recommended":"6.0.0"
     },
     "author": {
         "name": "Sivantarajan",
