--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
-    "name": "stylelint-config-recommended-less",
-    "version": "1.0.3",
-    "description": "A sharable stylelint config for less",
-    "main": "index.js",
-    "dependencies": {
-        "stylelint": "^14.0",
-        "stylelint-less": "^1.0.3",
-        "stylelint-config-recommended": "6.0.0"
-    },
-    "author": {
-        "name": "Sivantarajan",
-        "url": "https://github.com/ssivanatarajan/"
-    },
-    "bugs": {
-        "url": "https://github.com/ssivanatarajan/stylelint-config-recommended-less/issues"
-    },
-    "homepage": "https://github.com/ssivanatarajan/stylelint-config-recommended-less#readme",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/ssivanatarajan/stylelint-config-recommended-less.git"
-    },
-    "license": "MIT",
-    "env": {
-        "es6": true
-    },
-    "keywords": [
-        "stylelint",
-        "stylelint-config",
-        "recommended",
-        "less"
-    ]
+  "name": "stylelint-config-recommended-less",
+  "version": "1.0.3",
+  "type": "commonjs",
+  "description": "A sharable stylelint config for less",
+  "main": "index.js",
+  "dependencies": {
+    "stylelint": "^15.10.2",
+    "stylelint-config-recommended": "^13.0.0",
+    "stylelint-less": "^1.0.8"
+  },
+  "author": {
+    "name": "Sivantarajan",
+    "url": "https://github.com/ssivanatarajan/"
+  },
+  "bugs": {
+    "url": "https://github.com/ssivanatarajan/stylelint-config-recommended-less/issues"
+  },
+  "homepage": "https://github.com/ssivanatarajan/stylelint-config-recommended-less#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ssivanatarajan/stylelint-config-recommended-less.git"
+  },
+  "license": "MIT",
+  "keywords": [
+    "stylelint",
+    "stylelint-config",
+    "recommended",
+    "less"
+  ]
 }
